# create2-salt-miner

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile.cross  Justfile  OpenCL.def  README.md  autoresearch.checks.sh  autoresearch.md  autoresearch.sh  salty.toml
.github/workflows/: release.yml
src/: display.rs  gpgpu.rs  main.rs  miner.rs  server.rs
src/kernels/: keccak256.cl
