[package]
  authors = [ "Akshat Mittal <hi@akshatmittal.com>" ]
  edition = "2021"
  name = "salty"
  version = "0.1.0"

[dependencies]
  alloy-primitives = { version = "1.5.7", features = [ "rand" ] }
  clap = { version = "4.6.1", features = [ "derive" ] }
  console = "0.16.3"
  figment = { version = "0.10.19", features = [ "toml" ] }
  indicatif = "0.18.4"
  ocl = "0.19.7"
  rand = "0.10.1"
  serde = { version = "1.0.228", features = [ "derive" ] }

[features]
  default = [  ]

[profile.release]
  opt-level = 3
  lto = "fat"
  strip = true
  panic = "abort"
  codegen-units = 1
