[package]
  authors = [ "Akshat Mittal <hi@akshatmittal.com>" ]
  edition = "2024"
  name = "salty"
  version = "0.1.0"

[dependencies]
  alloy-primitives = { version = "1.5.7", features = [ "rand" ] }
  axum = "0.8.7"
  clap = { version = "4.6.1", features = [ "derive" ] }
  console = "0.16.3"
  eyre = "0.6.12"
  figment = { version = "0.10.19", features = [ "toml" ] }
  indicatif = "0.18.4"
  ocl = "0.19.7"
  rand = "0.10.1"
  rusqlite = { version = "0.37.0", features = [ "bundled" ] }
  serde = { version = "1.0.228", features = [ "derive" ] }
  serde_json = "1.0.145"
  tokio = { version = "1.48.0", features = [ "macros", "net", "rt-multi-thread" ] }
  utoipa = { version = "5.4.0", features = [ "axum_extras" ] }
  utoipa-swagger-ui = { version = "9.0.2", features = [ "axum" ] }

[features]
  default = [  ]

[profile.release]
  opt-level = 3
  lto = "fat"
  strip = true
  panic = "abort"
  codegen-units = 1
  debug = false
  incremental = false
